# creo-monitor

./: .gitignore  Cargo.toml  Dockerfile  build.rs
migrations/: 20250624113551_create_container_stats.sql  20250707162332_create_container_metadata.sql
src/: api.rs  error.rs  fsutil.rs  grpc.rs  lib.rs  main.rs  persistence.rs
src/api/: models.rs
src/cgroup/: collector.rs  container.rs  mod.rs  monitor.rs  utils.rs  v2.rs
src/cgroup/stats/: cpu.rs  error.rs  io.rs  memory.rs  mod.rs  net.rs  parser.rs
src/container/: error.rs  mod.rs  utils.rs
src/discovery/: containerd.rs  mod.rs
src/environment/: checks.rs  detect.rs  error.rs  mod.rs
src/mountinfo/: detect.rs  error.rs  mod.rs  parser.rs
src/persistence/: error.rs  models.rs  mysql.rs  persister.rs
