[package]
name = "creo-monitor"
version = "0.1.0"
edition = "2024"
license = "GPL"

[package.metadata]
clippy = { version = "0.1", features = ["deny-warnings"] }


[dependencies]
thiserror = "2.0.12"
serde = "1.0.219"
serde_json = "1.0.140"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "mysql", "migrate"] }
log = "0.4.27"
env_logger = "0.11.8"
axum = { version = "0.8.4", features = ["json"] }
tokio = { version = "1.45.1", features = ["net", "rt-multi-thread"] }
tonic = "0.13.1"
tower = "0.5.2"
prost = "0.13.5"
prost-types = "0.13.5"
hyper-util = "0.1.14"
hyper = "1.6.0"
dashmap = "6.1.0"


[dev-dependencies]
testcontainers = "0.24.0"
tempfile = "3.20.0"

[build-dependencies]
tonic-build = { version = "0.13.1", features = ["cleanup-markdown"] }
